# django-generic-admin-actions

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  tests.yml
generic_admin_actions/: __init__.py  __version__.py  admin.py  apps.py  forms.py
generic_admin_actions/templates/admin/: change-list.html  change_list.html  generic_actions.html
generic_admin_actions/templatetags/: generic_admin_actions.py
tests/testapp/: actions.py  admin.py  models.py  settings.py
tests/testapp/management/commands/: testapp.py
tests/testapp/migrations/: 0001_initial.py  0002_modeltwo.py
tests/testapp/tests/: test_generic_admin_actions.py
